tests/paczka1/small_fuzzy/93750696.err
Error in line 1: 5iI A75 13,3
Error in line 6: U1IVNjLH S503 15,78
Error in line 13: U1IVNjLH A75 98,2
